clusters/kestrel/manifests/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: vault-issuer
    cert-manager.io/common-name: vault
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - vault.kestrel.westelh.dev
    - vault
    secretName: vault-tls
  rules:
  - host: vault.kestrel.westelh.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault
            port:
              number: 8200
